--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "extremesa/aramex",
+    "name": "redaawad622/aramex",
     "description": "Integrate Laravel project with Aramex.",
     "keywords": [
     ],
